--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_sign_up">注册</string>
     <string name="sign_up_return">返回</string>
     <string name="sign_up_submit">提交</string>
+    <string name="me_sign_out">注销账号</string>
 </resources>
