--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="sign_up_submit">提交</string>
     <string name="me_sign_out">注销账号</string>
     <string name="calendar_hint">衣物搭配</string>
+    <string name="container_wear_history">container</string>
 </resources>
